--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_100"
-    android:paddingHorizontal="24dp"
-    android:paddingTop="32dp"
+    android:paddingHorizontal="64dp"
+    android:paddingTop="64dp"
     tools:context=".ui.main.MainActivity">
 
     <TextView
@@ -40,8 +40,9 @@
             android:background="@drawable/genre_selector"
             android:fontFamily="@font/poppins_semibold"
             android:paddingHorizontal="16dp"
-            android:paddingVertical="48dp"
+            android:paddingVertical="80dp"
             android:text="Masculino"
+            android:textSize="18sp"
             android:textAllCaps="false"
             android:textColor="@color/txt_color" />
 
@@ -51,10 +52,11 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="24dp"
             android:layout_weight="1"
+            android:textSize="18sp"
             android:background="@drawable/genre_selector"
             android:fontFamily="@font/poppins_semibold"
             android:paddingHorizontal="16dp"
-            android:paddingVertical="48dp"
+            android:paddingVertical="80dp"
             android:text="Feminino"
             android:textAllCaps="false"
             android:textColor="@color/txt_color" />
@@ -78,7 +80,7 @@
             android:background="@drawable/measure_shape"
             android:orientation="vertical"
             android:paddingHorizontal="16dp"
-            android:paddingVertical="32dp">
+            android:paddingVertical="80dp">
 
             <EditText
                 android:id="@+id/etHeight"
@@ -89,7 +91,7 @@
                 android:text="0"
                 android:textAlignment="center"
                 android:textColor="@color/txt_color"
-                android:textSize="32sp" />
+                android:textSize="38sp" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -99,7 +101,7 @@
                 android:text="Altura (em metros)"
                 android:textAlignment="center"
                 android:textColor="@color/txt_color_200"
-                android:textSize="14sp" />
+                android:textSize="16sp" />
 
 
         </LinearLayout>
@@ -111,7 +113,7 @@
             android:background="@drawable/measure_shape"
             android:orientation="vertical"
             android:paddingHorizontal="16dp"
-            android:paddingVertical="32dp">
+            android:paddingVertical="80dp">
 
             <EditText
                 android:id="@+id/etWeight"
@@ -122,7 +124,7 @@
                 android:text="0"
                 android:textAlignment="center"
                 android:textColor="@color/txt_color"
-                android:textSize="32sp" />
+                android:textSize="38sp" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -133,7 +135,7 @@
                 android:text="Peso (em kg)"
                 android:textAlignment="center"
                 android:textColor="@color/txt_color_200"
-                android:textSize="14sp" />
+                android:textSize="16sp" />
 
 
         </LinearLayout>
@@ -146,7 +148,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/btn_calc_shape"
         android:fontFamily="@font/poppins_semibold"
-        android:paddingVertical="24dp"
+        android:paddingVertical="48dp"
         android:text="Calcular"
         android:textAllCaps="false"
         android:textColor="@color/txt_color"
